<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/registroTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_username"/>

    <EditText
        android:id="@+id/regEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/numberTlf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_telefone"
        android:inputType="phone"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/regPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_passworld"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/regPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_passworld_confirm"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button_confirm"
        android:layout_marginTop="30dp"
        android:layout_gravity="end"/>

</LinearLayout>

